feat(main): :memo: update readme

--- a/src/slides/cover.html
+++ b/src/slides/cover.html
@@ -2,10 +2,11 @@
   <h1>Guida Essenziale all'Integrazione di Angular e Signal</h1>
   <p-note class="center">
     <h6>Un approccio pratico</h6>
+    <div class="bolognajs-logo"></div>
   </p-note>
   <p-note class="center bottom-fist-page text-sub-section">
     <span>Marco Pollacci</span>
-    <span>27/02/2024 - Phygital Hub</span>
+    <span>17/03/2024 - BolognaJS</span>
   </p-note>
 </p-slide>
 <p-slide class="two-columns">
@@ -15,5 +16,5 @@
     <span>Marco Pollacci</span>
     <span class="text-cover">Senior Software Developer @GELLIFY</span>
   </p-note>
-  <img style="--image-start-size:9em" class="alter-image-size" src="img/qr_link.svg" alt="qr" />
+  <img style="--image-start-size: 9em" class="alter-image-size" src="img/qr_link.svg" alt="qr" />
 </p-slide>
