--- a/src/slides/part-three.html
+++ b/src/slides/part-three.html
@@ -1,5 +1,5 @@
-<p-slide class="text-sub-section center">
-  <h1>Ultime novità</h1>
+<p-slide class="center">
+  <h1 class="text-sub-section">Ultime novità</h1>
 </p-slide>
 <p-slide autoplay timing-fragment="1000">
   <h5 class="text-cover center">Signal Input</h5>
