--- a/index.html
+++ b/index.html
@@ -2,10 +2,24 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Angular Signal</title>
-    <script>
-      location.href = './angular-signal/';
-    </script>
+    <style>
+      body {
+        background: #121212;
+        color: #ffffff;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        align-content: center;
+        height: 100vh;
+        overflow: hidden;
+      }
+    </style>
   </head>
-  <body></body>
+  <body>
+    <h1>Coming soon!!!</h1>
+    <h2>Stay tuned...</h2>
+  </body>
 </html>
