--- a/src/slides/cover.html
+++ b/src/slides/cover.html
@@ -2,7 +2,9 @@
   <h1>Guida Essenziale all'Integrazione di Angular e Signal</h1>
   <p-note class="center">
     <h6>Un approccio pratico</h6>
-    <div class="bolognajs-logo"></div>
+    <div class="bolognajs-logo">
+      <img src="img/bolognajs-logo.svg" alt="bolognajs logo" />
+    </div>
   </p-note>
   <p-note class="center bottom-fist-page text-sub-section">
     <span>Marco Pollacci</span>
