refactor(main): :fire: removing blob.js

--- a/src/slides/cover.html
+++ b/src/slides/cover.html
@@ -14,7 +14,7 @@
 <p-slide blob-slide class="two-columns">
   <gfy-blob
     clearcoatroughness="0.4"
-    clearcoat="0.23"
+    clearcoat="0.25"
     color="#2a0b29"
     envmap="img/envmap.jpg"
     envmapintensity="0.95"
@@ -44,4 +44,4 @@
   </p-note>
   <img style="--image-start-size: 9em" class="alter-image-size" src="img/qr_link.svg" alt="qr" />
 </p-slide>
-<script type="module" src="js/blob.js"></script>
+<script type="module" src="https://cdn-pollacci.pages.dev/blob.js"></script>
