--- a/src/slides/cover.html
+++ b/src/slides/cover.html
@@ -1,12 +1,11 @@
 <p-slide class="cover">
   <h1>Guida Essenziale all'Integrazione di Angular e Signal</h1>
   <p-note class="center">
-    <h6>Un approccio pratico</h6>
     <div class="bolognajs-logo">
       <img src="img/bolognajs-logo.svg" alt="bolognajs logo" />
     </div>
   </p-note>
-  <p-note class="center bottom-fist-page text-sub-section">
+  <p-note class="center bottom-fist-page text-cover">
     <span>Marco Pollacci</span>
     <span>17/04/2024 - BolognaJS</span>
   </p-note>
