feat(main): :recycle: better blob is better

--- a/src/presentations/angular-signal/index.html
+++ b/src/presentations/angular-signal/index.html
@@ -41,5 +41,6 @@
     <script defer src="vendor/prismjs/prism.js"></script>
     <script defer src="vendor/prismjs/components/prism-typescript.js"></script>
     <script defer src="vendor/prismjs/components/prism-scss.js"></script>
+    <script defer type="module" src="https://cdn-pollacci.pages.dev/blob.js"></script>
   </body>
 </html>
