--- a/src/slides/part-three.html
+++ b/src/slides/part-three.html
@@ -101,7 +101,7 @@
 </p-slide>
 <p-slide>
   <h5 style="margin-bottom: 0.5em" class="text-cover">Signal Model Input</h5>
-  <p class="mid-dimension">Angular crea automaticamente un output e viene usato come suffisso "Change"</p>
+  <p class="mid-dimension">Angular crea automaticamente un output che viene usato come suffisso "Change"</p>
   <pre data-label-file="signal-model.ts" class="language-javascript"><code class="mid-dimension">
     @Directive({...})
     export class CustomCheckbox {
@@ -115,7 +115,7 @@
   <h5 class="text-cover center">❗ Principali differenze ❗</h5>
   <ul class="long-list">
     <p-fragment><li>📌 model() definisce sia un input che un output</li></p-fragment>
-    <p-fragment><li>📌 Il nome dell'output è sempre il nome dell'input suffisso con Change per supportare i collegamenti bidirezionali</li></p-fragment>
+    <p-fragment><li>📌 Il nome dell'output è sempre il nome dell'input con suffisso Change per supportare i collegamenti bidirezionali</li></p-fragment>
     <p-fragment
       ><li>📌 ModelSignal è un WritableSignal, il che significa che il suo valore può essere modificato da qualsiasi punto utilizzando i metodi set e update.</li></p-fragment
     >
