feat(main): :pencil2: fix some code typo

--- a/src/slides/part-three.html
+++ b/src/slides/part-three.html
@@ -36,7 +36,7 @@
       });
     }
   </code>
-    <p-fragment><code class="language-html">&lt;app-input [first]="'Marco'" /></code> </p-fragment>
+    <p-fragment><code class="language-html">&lt;app-input first="Marco" /></code> </p-fragment>
     <p-fragment><code class="language-html">// Output 5</code> </p-fragment>
   </pre>
 </p-slide>
