--- a/src/slides/part-two.html
+++ b/src/slides/part-two.html
@@ -78,7 +78,7 @@
       /* ... */
     })
     export class AppComponent {
-      UserServiceSignal = this.appService.userSignal();
+      userServiceSignal = this.appService.userSignal();
 
       constructor(private appService: AppService) {}
 
