--- a/src/presentations/gdg/index.html
+++ b/src/presentations/gdg/index.html
@@ -14,7 +14,7 @@
 
   <body>
     <img alt="gdglogo" class="gdgLogo" src="img/logo_dark_QmPdj9K.svg" />
-    <p-deck> slide:cover-bolognajs slide:cover slide:part-one slide:part-two slide:part-three slide:thanks </p-deck>
+    <p-deck> slide:cover-gdg slide:cover slide:part-one slide:part-two slide:part-three slide:thanks </p-deck>
     <div aria-valuemax="100" aria-valuemin="0" aria-valuenow="0" class="presentation-progress" role="progressbar" title="Presentation progress"></div>
     <div class="presentation-toolbar" role="toolbar">
       <button aria-label="Toggle speaker mode (Alt-M)" class="toggle-mode" title="Toggle speaker mode" type="button">
