--- a/gdg/index.html
+++ b/gdg/index.html
@@ -14,18 +14,14 @@
 
   <body>
     <img alt="gdglogo" class="gdgLogo" src="img/logo_dark_QmPdj9K.svg" />
-    <p-deck> <!--slide:cover-bolognajs--><p-slide class="cover">
+    <p-deck> <!--slide:cover-gdg--><p-slide class="cover">
   <h1>Guida Essenziale all'Integrazione di Angular e Signal</h1>
-  <p-note class="center">
-    <div class="bolognajs-logo">
-      <img src="img/bolognajs-logo.svg" alt="bolognajs logo" />
-    </div>
-  </p-note>
+  <p-note class="center"> </p-note>
   <p-note class="center bottom-fist-page text-cover">
     <span>Marco Pollacci</span>
-    <span>17/04/2024 - BolognaJS</span>
+    <span>27/02/2024 - Phygital Hub</span>
   </p-note>
-</p-slide><!--/slide:cover-bolognajs-->
+</p-slide><!--/slide:cover-gdg-->
 <!--slide:cover--><p-slide blob-slide class="two-columns">
   <gfy-blob
     clearcoatroughness="0.4"
