--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <title>Angular Signal</title>
     <script>
-      location.href = './angular-signal/';
+      location.href = './bologna-js/';
     </script>
   </head>
   <body></body>
